# solana_simplified

./: README.md  package-lock.json  package.json
client/: main.ts
program/: Cargo.toml
program/src/: lib.rs  processor.rs
program/src/instructions/: init.rs  list.rs  mod.rs  post.rs
